[package]
name = "rotating-signer-provider"
version = "0.1.0"
edition = "2021"
description = "A signer provider that accepts your 'legacy' existing SignerProvider, then allows adding new SignerProviders with different keys and signing procedures, so you can, over time, rotate keys as you reopen channels."
license = "MIT OR Apache-2.0"

[dependencies]
lightning = "0.1.3"        # This is the rust-lightning/LDK crate
lightning-types = "0.2.0"  # Same version as used by LDK 0.1.3
tempfile = "3.8.1"         # Official Rust wrapper around mkstemp
bitcoin = "0.32.2"         # Same version as used by LDK 0.1.3
secp256k1 = "0.29.0"       # Same version as used by LDK 0.1.3
